2007-04-10  Thatcher Ulrich <tu@tulrich.com>

	* misc files: minimal changes to get gcc-4.0 compile working.  I
	haven't fixed warnings or bugs yet.

2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_xml.*: moved to 
	* gameswf/as_classes/as_xml.*
	* gameswf/as_classes/as_MovieClipLoader.*: removed
	(obsoletly, the new version - as_mcloader.*, now is not finished)
	* gameswf/gameswf_as_sprite.*,
	* gameswf/gameswf_sprite.cpp: added loadMovie method
	* gameswf/gameswf_timer.cpp: cleanup

2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/as_classes/as_array.cpp: processing of the following case is added
	new Array("ab", "cd", "ef", "gh", ...);
	* gameswf/gameswf_timer.*: processing of the multiparam setInterval
	function is added
	* gameswf/gameswf_root.cpp: protection of listener object against removal
	is added

2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files:
	rewritten gameswf_timer.* (listener was used),
	removed gameswf_xmlsocket.* (obsoletly, the new version - as_xmlsocket.*),
	added test_xmlsocket.(fla,swf),
	cleaning useless code

2007-04-08  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_file.cpp: netfile stuff moved from http_client.cpp
	* net/a lot files,
	* gameswf/a lot of files: completely rewritten  XMLSocket stuff,
	using net/net_interface_tcp.*
	* gameswf/as_classes/as_xmlsocket.*: added new files

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_xmlsocket.cpp
	* gameswf/gameswf_xml.*
	* gameswf/gameswf_test_ogl.cpp
	* gameswf/as_classes/as_MovieClipLoader.cpp
	fixed bug #1404428 [LIBXML2 support no longer compiles]

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_font.*: added tag 62 implementation (DefineFontInfo2)

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.cpp: fixed one more stream sound bug

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>
